# rust_CLI

./: .gitignore  README.md
d-day/: Cargo.toml
d-day/src/: day.rs  main.rs
file_hashing_cli/: Cargo.toml
file_hashing_cli/src/: get_os.rs  hash.rs  io_file.rs  main.rs
race_game/: Cargo.toml
race_game/src/: main.rs
server_cli/: Cargo.toml
server_cli/src/: main.rs  server.rs
shop_manage/: Cargo.toml
shop_manage/src/: customer.rs  main.rs  product.rs
shop_manage/src/customer/: mod.rs
shop_manage/src/product/: date.rs  mod.rs  product_info.rs
testing/: String_handle.rs  adding.rs  collect_ex.rs  deleting.rs  deleting_ex.rs  match.rs  match_same_type.rs  multi_line_input.rs  mut_Vec.rs
testing/io_mod/: inputing.rs  main.rs
todo/: Cargo.toml  main.rs
todo/src/: crud.rs  main.rs  tools.rs
todo2/: Cargo.toml
todo2/src/: main.rs
todo2/src/model/: db.rs
todo_v02/: Cargo.toml
todo_v02/src/: init.rs  main.rs
todo_v02/src/init/: service.rs  todo.rs  user.rs
todo_v03/: .gitignore  Cargo.toml
todo_v03/src/: main.rs  models.rs  schema.rs
todo_v03/src/service/: mod.rs
web_api_udemys/: .gitignore  Cargo.toml
web_api_udemys/src/: main.rs  models.rs  repositories.rs  schema.rs
web_api_udemys/src/rocket_routes/: mod.rs  rustaceans.rs
