[package]
name = "web_api_udemys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
diesel-async = { version = "0.4", features = ["postgres"] }
dotenvy = "0.15"
chrono= "0.4"
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.1", features = ["diesel_postgres"] }
